Add Global exception handler Add new endpoint user-role-relation Add swagger user-role-relation Add new exception global response for 500 errors Change mappers Change model with extencion base entity Change object error validation for generic response 400 Auth -> Complete migrate router handler.