@@ -1,5 +1,6 @@
 package cl.pim.auth.model;
 
+import cl.pim.auth.shared.entity.BaseIdEntity;
 import cl.pim.auth.shared.enumes.BasicStatusEnum;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -8,11 +9,7 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
 import lombok.experimental.Accessors;
-import org.springframework.data.annotation.CreatedDate;
-import org.springframework.data.annotation.Id;
-import org.springframework.data.annotation.LastModifiedDate;
 import org.springframework.data.annotation.Transient;
-import org.springframework.data.domain.Persistable;
 import org.springframework.data.relational.core.mapping.Table;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -21,7 +18,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Table(value = "user")
 @Getter
@@ -29,34 +25,19 @@ import java.util.stream.Collectors;
 @Accessors(chain = true)
 @NoArgsConstructor
 @ToString
-public class User implements UserDetails, Persistable<String> {
-    @Transient
-    @JsonIgnore
-    private Boolean isNew = false;
-    @Id
-    private String id;
-    @CreatedDate
-    @JsonIgnore
-    private LocalDateTime createdAt;
-    @LastModifiedDate
-    @JsonIgnore
-    private LocalDateTime updatedAt;
+public class User extends BaseIdEntity implements UserDetails {
     private BasicStatusEnum status;
     private String username;
-
     private String password;
-
     private Boolean enabled;
-
     @JsonIgnore
     private LocalDateTime lastPasswordUpdate;
-
     @Transient
     private List<Role> roles;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return this.roles.stream().map(authority -> new SimpleGrantedAuthority(authority.getCode())).collect(Collectors.toList());
+        return this.roles.stream().map(authority -> new SimpleGrantedAuthority(authority.getCode())).toList();
     }
 
     @Override
@@ -88,10 +69,5 @@ public class User implements UserDetails, Persistable<String> {
     @JsonProperty
     public void setPassword(String password) {
         this.password = password;
-    }
-
-    @Override
-    public boolean isNew() {
-        return this.isNew || id == null;
     }
 }
